api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: "nginx"
spec:
    rules:
        - host: api.pretzel218.messwithdns.com
          http:
              paths:
                  - pathType: Prefix
                    path: /
                    backend:
                        service:
                            name: api-service
                            port:
                                number: 8000
